Use xdr for browsers that support/need it (IE). Fixed table text alignment for IE.

--- a/squekky-activities-demo.css
+++ b/squekky-activities-demo.css
@@ -6,6 +6,8 @@
 	margin-right: -9px;
 	float: left;
 	text-align: left;}
+#squekky-activities th {
+	text-align: left;}
 #squekky-activities th, td {
 	padding: 3px 10px 5px 2px;
 	font-weight:normal;}
